# battleships

bots/rustbot/: Cargo.toml  Dockerfile
bots/rustbot/src/: main.rs
servers/rustserver/: Cargo.toml  Dockerfile
servers/rustserver/src/: bot.rs  game.rs  main.rs
