[package]
name = "rustserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4.21"
rand = "0.8.5"
serde_json = "1.0.115"
tokio = {version = "1.37.0", features = ["full"]}
tokio-tungstenite = {version = "0.21.0", features = ["native-tls"]}
tungstenite = "0.21.0"
